// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<NoneFound /> > should render with [noun='files' 1`] = `
<styled.div>
  <Icon
    name="info-circle"
  />
   No 
  files
   found
</styled.div>
`;

exports[`<NoneFoundBox /> > should render with [noun='boxes' 1`] = `
<Styled(Box)
  as={
    {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": [],
      "componentStyle": e {
        "baseHash": 1665723835,
        "baseStyle": undefined,
        "componentId": "sc-hLBbgP",
        "isStatic": false,
        "rules": [
          "
    border: ",
          [Function],
          ";
    border-radius: ",
          [Function],
          ";
    box-sizing: border-box;
    cursor: ",
          [Function],
          ";
    margin-bottom: 15px;
    padding: 10px 15px;
    position: relative;

    &:hover {
        ",
          [Function],
          "
    }
",
        ],
        "staticRulesId": "",
      },
      "foldedComponentIds": [],
      "render": [Function],
      "shouldForwardProp": undefined,
      "styledComponentId": "sc-hLBbgP",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
>
  <Icon
    name="info-circle"
  />
   No 
  boxes
   found.   
</Styled(Box)>
`;

exports[`<NoneFoundSection /> > should render with [noun='sections' 1`] = `
<Styled(BoxGroupSection)>
  <Icon
    name="info-circle"
  />
   No 
  sections
   found
</Styled(BoxGroupSection)>
`;

exports[`<NoneFoundSection /> > should render with [noun='sections'] and children 1`] = `
<Styled(BoxGroupSection)>
  <Icon
    name="info-circle"
  />
   No 
  sections
   found
  <span>
    . 
    <span>
      foo
    </span>
    .
  </span>
</Styled(BoxGroupSection)>
`;
